--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bharath G - AI & Data Science Portfolio</title>
+    <title>Bharath G</title>
     <!-- Chosen Palette: Slate & Teal Harmony -->
     <!-- Application Structure Plan: A single-page, narrative-driven layout is used to guide visitors logically from introduction (Hero) to evidence (Skills, Journey, Projects) and finally to action (Contact). This structure tells a cohesive story of professional growth and capability. The flow is designed for recruiters and hiring managers, presenting the most critical information (who you are, what you can do) upfront, followed by detailed proof points. This is more effective than a scattered, multi-page site for immediate impact. -->
     <!-- Visualization & Content Choices: 
@@ -581,3 +581,4 @@
     </script>
 </body>
 </html>
+
